# matrix-oicq-bridge

./: .gitignore  .gitmodules  Cargo.toml  README.md
dev-tools/docker/matrix-homeserver/: docker-compose.yml
dev-tools/docker/postgresql/: docker-compose.yml
src/: config.rs  data.rs  main.rs
src/bridge/: init.rs
src/matrix/: appservice.rs  mod.rs
src/oicq/: login.rs  mod.rs
